add_library(IoT STATIC
        Debounce.hpp
        IoT.cpp
        IoT.hpp
        Logger.hpp
        PushButton.cpp
        PushButton.hpp
        Timer.cpp
        Timer.hpp
        SceneManager.cpp
        SceneManager.hpp
        String.hpp
        Event.hpp
        Device.cpp
        Device.hpp
        Input.cpp
        Input.hpp
        Pcf8574.cpp
        Pcf8574.hpp
        Wire.cpp
        Wire.hpp
        AvrI2C.cpp
        AvrI2C.hpp
        Remote.cpp
        Remote.hpp
        Gpio.cpp
        Gpio.hpp)