add_library(IoT STATIC
        Debounce.hpp
        IoT.cpp
        IoT.hpp
        Logger.cpp
        Logger.hpp
        LoggerBase.hpp
        LoggerNoop.hpp
        LoggerPrint.hpp
        LoggerSerial.hpp
        PushButton.cpp
        PushButton.hpp
        Timer.cpp
        Timer.hpp
        SceneManager.cpp
        SceneManager.hpp
        String.hpp
        Event.hpp
        Device.cpp
        Device.hpp
        Input.cpp
        Input.hpp
        Pcf8574.cpp
        Pcf8574.hpp
        WireConfig.cpp
        WireConfig.hpp
        AvrI2C.cpp
        AvrI2C.hpp
        Remote.cpp
        Remote.hpp
        Gpio.cpp
        Gpio.hpp
        Motion.hpp)